--- a/package.yaml
+++ b/package.yaml
@@ -4,7 +4,7 @@ keywords:
   - websocket
   - network
   - 1
-  - 张玉洁的标签
+  - 张玉洁的标签2345
 
 license: MMMMMMM                                   # GPLv2，LGPLv2.1，MIT，Apache license v2.0，BSD
 
